Fix navbar z-index and update seeds

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -7,6 +7,6 @@
    position: fixed;
    top: 0;
    background-color: white;
-   z-index: 2;
+   z-index: 1000;
 }
 
