--- a/app/assets/stylesheets/components/_user_sidebar.scss
+++ b/app/assets/stylesheets/components/_user_sidebar.scss
@@ -72,21 +72,21 @@
 
 .sidebar-stat-subtext {
     text-align: center;
-    font-size: 12px;
+    font-size: .75rem;
     font-weight: 400;
     color: #494950;
     line-height: 1.2;
 }
 
 .text-small {
-    font-size: 12px;
+    font-size: 0.8rem;
     font-weight: 400;
     color: black;
     line-height: 1.6;
 }
 
 .text-med {
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.3;
 }
